# csv-previewer

./: main.py  pyproject.toml
streamlit_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
