[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-app"
version = "0.1.0"
description = "Streamlit application"
dependencies = [
    "matplotlib>=3.10.1",
    "plotly>=6.0.0",
    "streamlit>=1.42.2",
    "transformers>=4.49.0",
]

